--- a/register.html
+++ b/register.html
@@ -18,7 +18,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-auth.js"></script>
 
 
-    <script src="vendor/jquery/jquery-3.2.1.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 
     <script>
@@ -60,18 +60,20 @@
 
 
 
-                    $.post("https://afrigebeta.herokuapp.com/api/user/sendCode", {
-                        phoneNumber: document.getElementById('phoneNumber').value,
-                        recaptchaToken: recaptchaToken
-                    }, function(data, status) {
+                    /*
+                                        $.post("https://afrigebeta.herokuapp.com/api/user/sendCode", {
+                                            phoneNumber: document.getElementById('phoneNumber').value,
+                                            recaptchaToken: recaptchaToken
+                                        }, function(data, status) {
 
-                        if (status === 'success') {
-                            alert("hi")
-                        }
-                    }).fail(function(jqXHR, textStatus, errorThrown) {
+                                            if (status === 'success') {
+                                                alert("hi")
+                                            }
+                                        }).fail(function(jqXHR, textStatus, errorThrown) {
 
-                        console.log(jqXHR)
-                    });
+                                            console.log(jqXHR)
+                                        });
+                                        */
 
 
                 }
