--- a/register.html
+++ b/register.html
@@ -54,11 +54,11 @@
                         return new Promise(function(resolve, reject) {
 
                             //Your code logic goes here
-                            console.dir({
-                                phoneNumber: document.getElementById('phoneNumber').value,
-                                recaptchaToken
-                            })
-
+                            // console.dir({
+                            //     phoneNumber: document.getElementById('phoneNumber').value,
+                            //     recaptchaToken
+                            // })
+                            console.log("welcome")
                             var myHeaders = new Headers();
                             myHeaders.append('Content-Type', 'application/json');
 
