--- a/register.html
+++ b/register.html
@@ -173,9 +173,9 @@
 
             });
 
-            $(document).on('keyup', '.code', function() {
-                code = $(this).val()
-            });
+            // $(document).on('keyup', '.code', function() {
+            //     code = $(this).val()
+            // });
 
         })
 
